byproduct bug in login of the lawcontent spacing bug fixed

--- a/lawdb-frontend-react-bootstrap/src/styles/login.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/login.css
@@ -1,3 +1,10 @@
+/* this creates a spacing bug for search but is what's needed here so i made it specific to the page */
+.container-user {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+} 
+
 .log-card {
     border-radius: 20px;
     height: 500px;
